# ml-practice

./: .gitignore  README.MD  linear_reg.ipynb  logistic_reg.ipynb  logistic_reg.py  pyproject.toml
CIFAR10_classification_pytorch/: CIFAR10.ipynb  README.MD
IMDb_reviews_classifier/: README.MD  main.ipynb
MNIST_classification_pytorch/: MNIST.ipynb  model_full.pth
classification/: README.MD  breast_cancer_classification.ipynb  spaceship_titanic.ipynb  submission.csv  titanic_classification.ipynb
classification/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
classification/catboost_info/learn/: events.out.tfevents
classification/submissions/: spaceship_catboost_submission.csv  spaceship_rforest_submission.csv  submission_dtree.csv  submission_gradboost.csv  submission_neighbours.csv  submission_rforest.csv
regression/: House_prices_kaggle.ipynb  catboost_submission.csv  linear_reg.ipynb  lregression_submission.csv  submission.csv
regression/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
regression/catboost_info/learn/: events.out.tfevents
